Source/Sceelix.Core/ExpressionParsing/SceelixGrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 E:\\My .NET Projects\\Sceelix\\Source\\Sceelix.Designer.Graphs\\ExpressionParsing\\SceelixGrammar.g 2017-01-23 16:45:03

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019

#pragma warning disable 3021

using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace Sceelix.Designer.Graphs.ExpressionParsing
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
[System.CLSCompliant(false)]
public partial class SceelixGrammarParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ATTRID", "BOOLEAN", "CHAR", "CHECK", "COLON", "COMMENT", "DIV", "DOT", "DOUBLE", "EQUALS", "ESC_SEQ", "EXPONENT", "FLOAT", "GT", "GTEQ", "HEX_DIGIT", "ID", "INT", "LOCAL", "LT", "LTEQ", "MINUS", "MOD", "MULT", "NOT", "NOTEQUALS", "OCTAL_ESC", "OR", "PLUS", "SPECIALID", "SQBRACKETCLOSE", "SQBRACKETOPEN", "STRING", "TYPE", "UNICODE_ESC", "WS", "'$'", "'('", "')'", "','", "'@'", "'@@'"
	};
	public const int EOF=-1;
	public const int T__41=41;
	public const int T__42=42;
	public const int T__43=43;
	public const int T__44=44;
	public const int T__45=45;
	public const int T__46=46;
	public const int AND=4;
	public const int ATTRID=5;
	public const int BOOLEAN=6;
	public const int CHAR=7;
	public const int CHECK=8;
	public const int COLON=9;
	public const int COMMENT=10;
	public const int DIV=11;
	public const int DOT=12;
	public const int DOUBLE=13;
	public const int EQUALS=14;
	public const int ESC_SEQ=15;
	public const int EXPONENT=16;
	public const int FLOAT=17;
	public const int GT=18;
	public const int GTEQ=19;
	public const int HEX_DIGIT=20;
	public const int ID=21;
	public const int INT=22;
	public const int LOCAL=23;
	public const int LT=24;
	public const int LTEQ=25;
	public const int MINUS=26;
	public const int MOD=27;
	public const int MULT=28;
	public const int NOT=29;
	public const int NOTEQUALS=30;
	public const int OCTAL_ESC=31;
	public const int OR=32;
	public const int PLUS=33;
	public const int SPECIALID=34;
	public const int SQBRACKETCLOSE=35;
	public const int SQBRACKETOPEN=36;
	public const int STRING=37;
	public const int TYPE=38;
	public const int UNICODE_ESC=39;
	public const int WS=40;

	public SceelixGrammarParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public SceelixGrammarParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return SceelixGrammarParser.tokenNames; } }
	public override string GrammarFileName { get { return "E:\\My .NET Projects\\Sceelix\\Source\\Sceelix.Designer.Graphs\\ExpressionParsing\\SceelixGrammar.g"; } }


		public override void ReportError(RecognitionException e)
	    {
	        throw e;
	    }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_expr();
	partial void LeaveRule_expr();

	// $ANTLR start "expr"
	// E:\\My .NET Projects\\Sceelix\\Source\\Sceelix.Designer.Graphs\\ExpressionParsing\\SceelixGrammar.g:28:8: public expr : logicalExpression EOF !;
	[GrammarRule("expr")]
	public AstParserRuleReturnScope<CommonTree, IToken> expr()
	{
		EnterRule_expr();
		EnterRule("expr", 1);
		TraceIn("expr", 1);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken EOF2 = default(IToken);
		AstParserRuleReturnScope<CommonTree, IToken> logicalExpression1 = default(AstParserRuleReturnScope<CommonTree, IToken>);

		CommonTree EOF2_tree = default(CommonTree);
		try { DebugEnterRule(GrammarFileName, "expr");
		DebugLocation(28, 25);
		try
		{
			// E:\\My .NET Projects\\Sceelix\\Source\\Sceelix.Designer.Graphs\\ExpressionParsing\\SceelixGrammar.g:29:2: ( logicalExpression EOF !)
			DebugEnterAlt(1);
			// E:\\My .NET Projects\\Sceelix\\Source\\Sceelix.Designer.Graphs\\ExpressionParsing\\SceelixGrammar.g:29:4: logicalExpression EOF !
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(29, 4);
			PushFollow(Follow._logicalExpression_in_expr85);
			logicalExpression1=logicalExpression();
			PopFollow();

			adaptor.AddChild(root_0, logicalExpression1.Tree);
			DebugLocation(29, 25);
			EOF2=(IToken)Match(input,EOF,Follow._EOF_in_expr87); 

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("expr", 1);
			LeaveRule("expr", 1);
			LeaveRule_expr();
		}
		DebugLocation(29, 25);
		} finally { DebugExitRule(GrammarFileName, "expr"); }
		return retval;

	}
	// $ANTLR end "expr"

	partial void EnterRule_logicalExpression();
	partial void LeaveRule_logicalExpression();

	// $ANTLR start "logicalExpression"
	// E:\\My .NET Projects\\Sceelix\\Source\\Sceelix.Designer.Graphs\\ExpressionParsing\\SceelixGrammar.g:33:1: logicalExpression : booleanAndExpression ( OR ^ booleanAndExpression )* ;
	[GrammarRule("logicalExpression")]
	private AstParserRuleReturnScope<CommonTree, IToken> logicalExpression()
	{
		EnterRule_logicalExpression();
		EnterRule("logicalExpression", 2);
		TraceIn("logicalExpression", 2);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken OR4 = default(IToken);
		AstParserRuleReturnScope<CommonTree, IToken> booleanAndExpression3 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> booleanAndExpression5 = default(AstParserRuleReturnScope<CommonTree, IToken>);

		CommonTree OR4_tree = default(CommonTree);
		try { DebugEnterRule(GrammarFileName, "logicalExpression");
		DebugLocation(33, 4);
		try
		{
			// E:\\My .NET Projects\\Sceelix\\Source\\Sceelix.Designer.Graphs\\ExpressionParsing\\SceelixGrammar.g:34:5: ( booleanAndExpression ( OR ^ booleanAndExpression )* )
			DebugEnterAlt(1);
			// E:\\My .NET Projects\\Sceelix\\Source\\Sceelix.Designer.Graphs\\ExpressionParsing\\SceelixGrammar.g:34:10: booleanAndExpression ( OR ^ booleanAndExpression )*
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(34, 10);
			PushFollow(Follow._booleanAndExpression_in_logicalExpression107);
			booleanAndExpression3=booleanAndExpression();
			PopFollow();

			adaptor.AddChild(root_0, booleanAndExpression3.Tree);
			DebugLocation(34, 31);
			// E:\\My .NET Projects\\Sceelix\\Source\\Sceelix.Designer.Graphs\\ExpressionParsing\\SceelixGrammar.g:34:31: ( OR ^ booleanAndExpression )*
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				int LA1_0 = input.LA(1);

				if ((LA1_0==OR))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch ( alt1 )
				{
				case 1:
					DebugEnterAlt(1);
					// E:\\My .NET Projects\\Sceelix\\Source\\Sceelix.Designer.Graphs\\ExpressionParsing\\SceelixGrammar.g:34:33: OR ^ booleanAndExpression
					{
					DebugLocation(34, 35);
					OR4=(IToken)Match(input,OR,Follow._OR_in_logicalExpression111); 
					OR4_tree = (CommonTree)adaptor.Create(OR4);
					root_0 = (CommonTree)adaptor.BecomeRoot(OR4_tree, root_0);
					DebugLocation(34, 37);
					PushFollow(Follow._booleanAndExpression_in_logicalExpression114);
					booleanAndExpression5=booleanAndExpression();
					PopFollow();

					adaptor.AddChild(root_0, booleanAndExpression5.Tree);

					}
					break;

				default:
					goto loop1;
				}
			}

			loop1:
				;

			} finally { DebugExitSubRule(1); }


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("logicalExpression", 2);
			LeaveRule("logicalExpression", 2);
			LeaveRule_logicalExpression();
		}
		DebugLocation(35, 4);
		} finally { DebugExitRule(GrammarFileName, "logicalExpression"); }
		return retval;

	}
	// $ANTLR end "logicalExpression"

	partial void EnterRule_booleanAndExpression();
	partial void LeaveRule_booleanAndExpression();

	// $ANTLR start "booleanAndExpression"
	// E:\\My .NET Projects\\Sceelix\\Source\\Sceelix.Designer.Graphs\\ExpressionParsing\\SceelixGrammar.g:37:1: booleanAndExpression : equalityExpression ( AND ^ equalityExpression )* ;
	[GrammarRule("booleanAndExpression")]
	private AstParserRuleReturnScope<CommonTree, IToken> booleanAndExpression()
	{
		EnterRule_booleanAndExpression();
		EnterRule("booleanAndExpression", 3);
		TraceIn("booleanAndExpression", 3);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken AND7 = default(IToken);
		AstParserRuleReturnScope<CommonTree, IToken> equalityExpression6 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> equalityExpression8 = default(AstParserRuleReturnScope<CommonTree, IToken>);

		CommonTree AND7_tree = default(CommonTree);
		try { DebugEnterRule(GrammarFileName, "booleanAndExpression");
		DebugLocation(37, 4);
		try
		{
			// E:\\My .NET Projects\\Sceelix\\Source\\Sceelix.Designer.Graphs\\ExpressionParsing\\SceelixGrammar.g:38:5: ( equalityExpression ( AND ^ equalityExpression )* )
			DebugEnterAlt(1);
			// E:\\My .NET Projects\\Sceelix\\Source\\Sceelix.Designer.Graphs\\ExpressionParsing\\SceelixGrammar.g:38:10: equalityExpression ( AND ^ equalityExpression )*
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(38, 10);
			PushFollow(Follow._equalityExpression_in_booleanAndExpression141);
			equalityExpression6=equalityExpression();
			PopFollow();

			adaptor.AddChild(root_0, equalityExpression6.Tree);
			DebugLocation(38, 29);
			// E:\\My .NET Projects\\Sceelix\\Source\\Sceelix.Designer.Graphs\\ExpressionParsing\\SceelixGrammar.g:38:29: ( AND ^ equalityExpression )*
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=2;
				try { DebugEnterDecision(2, false);
				int LA2_0 = input.LA(1);

				if ((LA2_0==AND))
				{
					alt2 = 1;
				}


				} finally { DebugExitDecision(2); }
				switch ( alt2 )
				{
				case 1:
					DebugEnterAlt(1);
					// E:\\My .NET Projects\\Sceelix\\Source\\Sceelix.Designer.Graphs\\ExpressionParsing\\SceelixGrammar.g:38:31: AND ^ equalityExpression
					{
					DebugLocation(38, 34);
					AND7=(IToken)Match(input,AND,Follow._AND_in_booleanAndExpression145); 
					AND7_tree = (CommonTree)adaptor.Create(AND7);
					root_0 = (CommonTree)adaptor.BecomeRoot(AND7_tree, root_0);
					DebugLocation(38, 36);
					PushFollow(Follow._equalityExpression_in_booleanAndExpression148);
					equalityExpression8=equalityExpression();
					PopFollow();

					adaptor.AddChild(root_0, equalityExpression8.Tree);

					}
					break;

				default:
					goto loop2;
				}
			}

			loop2:
				;

			} finally { DebugExitSubRule(2); }


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("booleanAndExpression", 3);
			LeaveRule("booleanAndExpression", 3);
			LeaveRule_booleanAndExpression();
		}
		DebugLocation(39, 4);
		} finally { DebugExitRule(GrammarFileName, "booleanAndExpression"); }
		return retval;

	}
	// $ANTLR end "booleanAndExpression"

	partial void EnterRule_equalityExpression();
	partial void LeaveRule_equalityExpression();

	// $ANTLR start "equalityExpression"
	// E:\\My .NET Projects\\Sceelix\\Source\\Sceelix.Designer.Graphs\\ExpressionParsing\\SceelixGrammar.g:41:1: equalityExpression : relationalExpression ( ( EQUALS ^| NOTEQUALS ^) relationalExpression )* ;
	[GrammarRule("equalityExpression")]
	private AstParserRuleReturnScope<CommonTree, IToken> equalityExpression()
	{
		EnterRule_equalityExpression();
		EnterRule("equalityExpression", 4);
		TraceIn("equalityExpression", 4);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken EQUALS10 = default(IToken);
		IToken NOTEQUALS11 = default(IToken);
		AstParserRuleReturnScope<CommonTree, IToken> relationalExpression9 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> relationalExpression12 = default(AstParserRuleReturnScope<CommonTree, IToken>);

		CommonTree EQUALS10_tree = default(CommonTree);
		CommonTree NOTEQUALS11_tree = default(CommonTree);
		try { DebugEnterRule(GrammarFileName, "equalityExpression");
		DebugLocation(41, 4);
		try
		{
			// E:\\My .NET Projects\\Sceelix\\Source\\Sceelix.Designer.Graphs\\ExpressionParsing\\SceelixGrammar.g:42:5: ( relationalExpression ( ( EQUALS ^| NOTEQUALS ^) relationalExpression )* )
			DebugEnterAlt(1);
			// E:\\My .NET Projects\\Sceelix\\Source\\Sceelix.Designer.Graphs\\ExpressionParsing\\SceelixGrammar.g:42:10: relationalExpression ( ( EQUALS ^| NOTEQUALS ^) relationalExpression )*
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(42, 10);
			PushFollow(Follow._relationalExpression_in_equalityExpression175);
			relationalExpression9=relationalExpression();
			PopFollow();

			adaptor.AddChild(root_0, relationalExpression9.Tree);
			DebugLocation(42, 31);
			// E:\\My .NET Projects\\Sceelix\\Source\\Sceelix.Designer.Graphs\\ExpressionParsing\\SceelixGrammar.g:42:31: ( ( EQUALS ^| NOTEQUALS ^) relationalExpression )*
			try { DebugEnterSubRule(4);
			while (true)
			{
				int alt4=2;
				try { DebugEnterDecision(4, false);
				int LA4_0 = input.LA(1);

				if ((LA4_0==EQUALS||LA4_0==NOTEQUALS))
				{
					alt4 = 1;
				}


				} finally { DebugExitDecision(4); }
				switch ( alt4 )
				{
				case 1:
					DebugEnterAlt(1);
					// E:\\My .NET Projects\\Sceelix\\Source\\Sceelix.Designer.Graphs\\ExpressionParsing\\SceelixGrammar.g:43:7: ( EQUALS ^| NOTEQUALS ^) relationalExpression
					{
					DebugLocation(43, 7);
					// E:\\My .NET Projects\\Sceelix\\Source\\Sceelix.Designer.Graphs\\ExpressionParsing\\SceelixGrammar.g:43:7: ( EQUALS ^| NOTEQUALS ^)
					int alt3=2;
					try { DebugEnterSubRule(3);
					try { DebugEnterDecision(3, false);
					int LA3_0 = input.LA(1);

					if ((LA3_0==EQUALS))
					{
						alt3 = 1;
					}
					else if ((LA3_0==NOTEQUALS))
					{
						alt3 = 2;
					}
					else
					{
						NoViableAltException nvae = new NoViableAltException("", 3, 0, input);
						DebugRecognitionException(nvae);
						throw nvae;
					}
					} finally { DebugExitDecision(3); }
					switch (alt3)
					{
					case 1:
						DebugEnterAlt(1);
						// E:\\My .NET Projects\\Sceelix\\Source\\Sceelix.Designer.Graphs\\ExpressionParsing\\SceelixGrammar.g:43:8: EQUALS ^
						{
						DebugLocation(43, 14);
						EQUALS10=(IToken)Match(input,EQUALS,Follow._EQUALS_in_equalityExpression187); 
						EQUALS10_tree = (CommonTree)adaptor.Create(EQUALS10);
						root_0 = (CommonTree)adaptor.BecomeRoot(EQUALS10_tree, root_0);

						}
						break;
					case 2:
						DebugEnterAlt(2);
						// E:\\My .NET Projects\\Sceelix\\Source\\Sceelix.Designer.Graphs\\ExpressionParsing\\SceelixGrammar.g:44:9: NOTEQUALS ^
						{
						DebugLocation(44, 18);
						NOTEQUALS11=(IToken)Match(input,NOTEQUALS,Follow._NOTEQUALS_in_equalityExpression199); 
						NOTEQUALS11_tree = (CommonTree)adaptor.Create(NOTEQUALS11);
						root_0 = (CommonTree)adaptor.BecomeRoot(NOTEQUALS11_tree, root_0);

						}
						break;

					}
					} finally { DebugExitSubRule(3); }

					DebugLocation(44, 21);
					PushFollow(Follow._relationalExpression_in_equalityExpression203);
					relationalExpression12=relationalExpression();
					PopFollow();

					adaptor.AddChild(root_0, relationalExpression12.Tree);

					}
					break;

				default:
					goto loop4;
				}
			}

			loop4:
				;

			} finally { DebugExitSubRule(4); }


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("equalityExpression", 4);
			LeaveRule("equalityExpression", 4);
			LeaveRule_equalityExpression();
		}
		DebugLocation(45, 4);
		} finally { DebugExitRule(GrammarFileName, "equalityExpression"); }
		return retval;

	}
	// $ANTLR end "equalityExpression"

	partial void EnterRule_relationalExpression();
	partial void LeaveRule_relationalExpression();

	// $ANTLR start "relationalExpression"
	// E:\\My .NET Projects\\Sceelix\\Source\\Sceelix.Designer.Graphs\\ExpressionParsing\\SceelixGrammar.g:47:1: relationalExpression : additiveExpression ( ( LT ^| LTEQ ^| GT ^| GTEQ ^) additiveExpression )* ;
	[GrammarRule("relationalExpression")]
	private AstParserRuleReturnScope<CommonTree, IToken> relationalExpression()
	{
		EnterRule_relationalExpression();
		EnterRule("relationalExpression", 5);
		TraceIn("relationalExpression", 5);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken LT14 = default(IToken);
		IToken LTEQ15 = default(IToken);
		IToken GT16 = default(IToken);
		IToken GTEQ17 = default(IToken);
		AstParserRuleReturnScope<CommonTree, IToken> additiveExpression13 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> additiveExpression18 = default(AstParserRuleReturnScope<CommonTree, IToken>);

		CommonTree LT14_tree = default(CommonTree);
		CommonTree LTEQ15_tree = default(CommonTree);
		CommonTree GT16_tree = default(CommonTree);
		CommonTree GTEQ17_tree = default(CommonTree);
		try { DebugEnterRule(GrammarFileName, "relationalExpression");
		DebugLocation(47, 4);
		try
		{
			// E:\\My .NET Projects\\Sceelix\\Source\\Sceelix.Designer.Graphs\\ExpressionParsing\\SceelixGrammar.g:48:5: ( additiveExpression ( ( LT ^| LTEQ ^| GT ^| GTEQ ^) additiveExpression )* )
			DebugEnterAlt(1);
			// E:\\My .NET Projects\\Sceelix\\Source\\Sceelix.Designer.Graphs\\ExpressionParsing\\SceelixGrammar.g:48:10: additiveExpression ( ( LT ^| LTEQ ^| GT ^| GTEQ ^) additiveExpression )*
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(48, 10);
			PushFollow(Follow._additiveExpression_in_relationalExpression229);
			additiveExpression13=additiveExpression();
			PopFollow();

			adaptor.AddChild(root_0, additiveExpression13.Tree);
			DebugLocation(48, 29);
			// E:\\My .NET Projects\\Sceelix\\Source\\Sceelix.Designer.Graphs\\ExpressionParsing\\SceelixGrammar.g:48:29: ( ( LT ^| LTEQ ^| GT ^| GTEQ ^) additiveExpression )*
			try { DebugEnterSubRule(6);
			while (true)
			{
				int alt6=2;
				try { DebugEnterDecision(6, false);
				int LA6_0 = input.LA(1);

				if (((LA6_0>=GT && LA6_0<=GTEQ)||(LA6_0>=LT && LA6_0<=LTEQ)))
				{
					alt6 = 1;
				}

